# mredis

./: CMakeLists.txt  README.md
mredis/src/: dict.cc  dict.h  intset.cc  intset.h  sds.cc  sds.h  skiplist.h  string.cc  string.h  zmalloc.cc  zmalloc.h
mredis/test/: dict_test.cc  intset_test.cc  skiplist_test.cc  string_test.cc  test_main.cc
notes/: dict.md  intset.md  sds.md  skiplist.md  zmalloc.md
